# promptic-python-sdk

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  conductor.json  prek.toml  pyproject.toml
.github/actions/setup-backend/: action.yml
.github/prompts/: release-notes.prompt.yml
.github/workflows/: ci.yml  release.yml
examples/: agent_evaluation.py  customer_service_demo.py  langchain_agent.py  langchain_deep_agent.py
src/promptic_sdk/: __init__.py  client.py  models.py  tracing.py
src/promptic_sdk/cli/: __init__.py  config.py  main.py
src/promptic_sdk/cli/commands/: annotations.py  components.py  configure.py  datasets.py  deployments.py  evaluations.py  evaluators.py  experiments.py  iterations.py  login.py  observations.py  runs.py  traces.py  workspace.py
tests/: test_cli.py  test_client.py  test_config.py  test_placeholder.py  test_tracing.py
